--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -6,6 +6,7 @@ on:
       - "main"
 
 env:
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
   NUMBER_1: 0
   NUMBER_2: 0
   NUMBER_3: 0
@@ -39,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get-token-and-numbers
-        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=NUMBER_1::$(( 10 ))
+        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=NUMBER_1::jq '.num1' response.json
       #   env:
       #     NUMBER_1: ./response.json["num1"]
       #     NUMBER_2: ./response.json["num2"]
