--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -40,12 +40,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get-token-and-numbers
-        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=NUMBER_1::jq '.num1' response.json
-      #   env:
-      #     NUMBER_1: ./response.json["num1"]
-      #     NUMBER_2: ./response.json["num2"]
-      #     NUMBER_3: NUMBER_1 + NUMBER_2
-      #     TOKEN: ./response.json["token"]
+        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=TOKEN::jq '.token' response.json && echo ::set-env name=NUMBER_1::jq '.num1' response.json && echo ::set-env name=NUMBER_2::jq '.num2' response.json
 
-      # - name: fake-deploy-check
-      #   run: touch status.json && curl -d {"token":"${TOKEN}","submittedAnswer":${NUMBER_3}} --request POST https://fdeployserver.up.railway.app/deploy > ./status.json && cat status.json
+      - name: calculate-answer
+        run: echo ::set-env name=NUMBER_3::$(( $NUMBER_1 + $NUMBER_2 ))
+
+      - name: fake-deploy-check
+        run: touch status.txt && curl -d {"token":$TOKEN,"answer":$NUMBER_3} --request POST https://fdeployserver.up.railway.app/deploy > ./status.txt && echo status.txt
+        
+      - name: Failing deployment if response is not "OK"
+        if: $(cat status.txt) != "OK"
+        run: exit 1
+        
