--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -50,6 +50,6 @@ jobs:
         run: touch status.txt && curl -d {"token":$TOKEN,"answer":$NUMBER_3} --request POST https://fdeployserver.up.railway.app/deploy > ./status.txt && echo ::set-env name=STATUS_CODE::cat status.txt
         
       - name: Failing deployment if response is not "OK"
-        if: STATUS_CODE != "OK"
+        if: $STATUS_CODE != "OK"
         run: exit 1
         
