--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -41,7 +41,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get-token-and-numbers
-        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=TOKEN::jq '.token' response.json && echo ::set-env name=NUMBER_1::jq '.num1' response.json && echo ::set-env name=NUMBER_2::jq '.num2' response.json
+        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=TOKEN::${jq '.token' response.json} && echo ::set-env name=NUMBER_1::jq '.num1' response.json && echo ::set-env name=NUMBER_2::jq '.num2' response.json
 
       - name: calculate-answer
         run: echo "$NUMBER_1" && echo "$NUMBER_2" && echo "$TOKEN" echo ::set-env name=NUMBER_3::$(( $NUMBER_1 + $NUMBER_2 ))
