--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -41,13 +41,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: get-token-and-numbers
-        run: touch response.json && curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && echo ::set-env name=TOKEN::$(jq '.token' response.json) && echo ::set-env name=NUMBER_1::$(jq '.num1' response.json) && echo ::set-env name=NUMBER_2::$(jq '.num2' response.json)
+        run: touch response.json && \
+              curl --request GET https://fdeployserver.up.railway.app/challenge > ./response.json && \
+              echo ::set-env name=TOKEN::$(jq '.token' response.json) && \
+              echo ::set-env name=NUMBER_1::$(jq '.num1' response.json) && \
+              echo ::set-env name=NUMBER_2::$(jq '.num2' response.json)
 
       - name: calculate-answer
-        run: echo "$NUMBER_1" && echo "$NUMBER_2" && echo "$TOKEN" && echo ::set-env name=NUMBER_3::$(( $NUMBER_1 + $NUMBER_2 ))
+        run: echo "$NUMBER_1" && \
+              echo "$NUMBER_2" && \
+              echo "$TOKEN" && \
+              echo ::set-env name=NUMBER_3::$(( $NUMBER_1 + $NUMBER_2 ))
 
       - name: fake-deploy-check
-        run: touch status.txt && curl -d {"token":$TOKEN,"answer":$NUMBER_3} --request POST https://fdeployserver.up.railway.app/deploy > ./status.txt && echo ::set-env name=STATUS_CODE::$(cat status.txt)
+        run: touch status.txt && \
+              curl --location --request POST 'https://fdeployserver.up.railway.app/deploy' \
+              --header 'Content-Type: application/json' \
+              --data-raw '{
+              "token": "rg2yk",
+              "answer": 78
+              }' > ./status.txt && \
+        echo ::set-env name=STATUS_CODE::$(cat status.txt)
         
       - name: Failing deployment if response is not "OK"
         # if: $STATUS_CODE != "OK"
