--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -56,11 +56,9 @@ jobs:
       - name: fake-deploy-check
         run: touch status.txt && \
               curl --location --request POST 'https://fdeployserver.up.railway.app/deploy' \
-              "--header 'Content-Type: application/json'" \
-              "--data-raw '{"
+              --data-raw '{
               "token": "rg2yk",
-              "answer": 78
-              "}' > ./status.txt &&" \
+              "answer": 78}' > ./status.txt && \
               echo ::set-env name=STATUS_CODE::$(cat status.txt)
         
       - name: Failing deployment if response is not "OK"
