--- a/.github/workflows/app_workflow.yml
+++ b/.github/workflows/app_workflow.yml
@@ -48,8 +48,8 @@ jobs:
 
       - name: fake-deploy-check
         run: touch status.txt && curl --location --request POST 'https://fdeployserver.up.railway.app/deploy' --header 'Content-Type:application/json' --data-raw '{
-              "token":$TOKEN,
-              "answer":$NUMBER_3}' > ./status.txt && echo ::set-env name=STATUS_CODE::$(cat status.txt)
+              "token":$(TOKEN),
+              "answer":$(NUMBER_3)}' > ./status.txt && echo ::set-env name=STATUS_CODE::$(cat status.txt)
       
       - name: display-deploy-status
         run: echo "$STATUS_CODE"
