added cronjob to the mysql database for nightly dumps

--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -2,7 +2,9 @@ version: '3.9'
 
 services:
   mysql-db:
-    image: mysql:latest
+    build:
+      context: .
+      dockerfile: mysql.Dockerfile
     container_name: mysql-db
     environment:
       MYSQL_USER: src
